# bpm-analyzer

./: .gitignore  CMakeLists.txt
core/: CMakeLists.txt
core/include/bpmcore/: BeatTracker.hpp  BpmAnalyzer.hpp  OnsetDetector.hpp  TempoEstimator.hpp  Wav.hpp
core/src/: BeatTracker.cpp  BpmAnalyzer.cpp  OnsetDetector.cpp  TempoEstimator.cpp  Wav.cpp
core/tests/: CMakeLists.txt  test_beat_tracker.cpp  test_bpm_analyzer_synthetic.cpp  test_onset_detector.cpp  test_tempo_estimator.cpp
core/tools/: bpmcli.cpp
ios/: project.yml
ios/BPMAnalyzer/: BPMAnalyzerApp.swift  ContentView.swift  Info.plist  RecordingRingView.swift
ios/BPMAnalyzer/Audio/: MicCapture.swift
ios/BPMAnalyzer/Models/: BpmMeasurement.swift
ios/BpmCoreKit/: Package.swift
ios/BpmCoreKit/Sources/BpmCoreKit/: BpmCoreKit.swift
ios/BpmCoreKit/Sources/CBpmCore/: BeatTracker.cpp  BpmAnalyzer.cpp  BpmBridge.cpp  OnsetDetector.cpp  TempoEstimator.cpp  Wav.cpp  kiss_fft.c  kiss_fftr.c
ios/BpmCoreKit/Sources/CBpmCore/include/: BpmBridge.hpp  _kiss_fft_guts.h  bpmcore  kiss_fft.h  kiss_fft_log.h  kiss_fftr.h
scripts/: generate_click_tracks.py
